--- a/.github/workflows/javadoc.yml
+++ b/.github/workflows/javadoc.yml
@@ -23,6 +23,8 @@ jobs:
     # Checkout source code
     - name: Checkout
       uses: actions/checkout@v2
+      with:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
     # Cache dependencies for faster build time in future
     - name: Cache dependencies
