--- a/.github/workflows/javadoc.yml
+++ b/.github/workflows/javadoc.yml
@@ -65,19 +65,13 @@ jobs:
         mv .git RELEASE/.git
         cd RELEASE
         echo "Checking out $DEPLOY_BRANCH"
-        git checkout -b $DEPLOY_BRANCH
-        git status
-        git stash && git stash drop
-        (git pull --depth 1 origin $DEPLOY_BRANCH --rebase -X theirs --allow-unrelated-histories) || (echo "Docs branch synced")
-        mv ./.git ../.git
+        git checkout $DEPLOY_BRANCH || git checkout -b $DEPLOY_BRANCH
+        git pull origin $DEPLOY_BRANCH --rebase -X theirs || echo "Docs branch synced"
         cd ..
-
-        # Push build into the docs branch
+        mv .git RELEASE/.git
         mv docs-build BUILD
         echo "Pushing build $GIT_COMMIT to $DEPLOY_BRANCH"
-        mv .git BUILD/.git
-        cd BUILD
-        git status
+        cd RELEASE
         git add -A
         git commit -m "Automated documentation build $GIT_COMMIT"
         git push origin $DEPLOY_BRANCH
