--- a/.github/workflows/javadoc.yml
+++ b/.github/workflows/javadoc.yml
@@ -58,20 +58,29 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        DEPLOY_BRANCH=test_java
+        DEPLOY_BRANCH=$DOCUMENTATIONS_BRANCH
         GIT_COMMIT=$(git rev-parse --short HEAD)
 
+        # Move .git directory to a temporary location
+        mv .git ../.git_temp
         mkdir RELEASE
-        mv .git RELEASE/.git
+        mv ../.git_temp RELEASE/.git
         cd RELEASE
+
         echo "Checking out $DEPLOY_BRANCH"
         git checkout $DEPLOY_BRANCH || git checkout -b $DEPLOY_BRANCH
         git pull origin $DEPLOY_BRANCH --rebase -X theirs || echo "Docs branch synced"
+
+        # Move .git directory back
+        mv .git ../.git_temp
+        mv ../.git_temp .git
         cd ..
-        mv .git RELEASE/.git
-        mv docs-build BUILD
+
+        # Push build into the docs branch
+        mv site BUILD # Change 'docs-build' to 'site' if that's your build directory
         echo "Pushing build $GIT_COMMIT to $DEPLOY_BRANCH"
-        cd RELEASE
+        mv .git BUILD/.git
+        cd BUILD
         git add -A
         git commit -m "Automated documentation build $GIT_COMMIT"
         git push origin $DEPLOY_BRANCH
