--- a/.github/workflows/javadoc.yml
+++ b/.github/workflows/javadoc.yml
@@ -49,7 +49,7 @@ jobs:
     - name: Create Pull Request
       uses: peter-evans/create-pull-request@v6.0.5
       with:
-        token: ${{ secrets.TOKEN }}
+        token: ${{ secrets.GITHUB_TOKEN }}
         commit-message: Update files
         committer: GitHub Action <action@github.com>
         author: GitHub Action <action@github.com>
