--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,3 +1,7 @@
 translation:
   - changed-files:
     - any-glob-to-any-file: 'src/main/resources/messages_*_*.properties'
+
+Front End:
+  - changed-files:
+    - any-glob-to-any-file: '**/*.html'
