--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -14,3 +14,4 @@ jobs:
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           configuration-path: .github/labeler.yml
+          sync-labels: true
