--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -13,5 +13,5 @@ jobs:
       - uses: actions/labeler@v5
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-          configuration-path: .github/labeler.yml
+          configuration-path: .github/labeler-config.yml
           sync-labels: true
