--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,9 @@ sourceSets {
             if (System.getenv("DOCKER_ENABLE_SECURITY") == "false") {
                 exclude "stirling/software/SPDF/config/security/**"
                 exclude "stirling/software/SPDF/controller/api/UserController.java"
+                exclude "stirling/software/SPDF/controller/api/DatabaseController.java"
                 exclude "stirling/software/SPDF/controller/web/AccountWebController.java"
+                exclude "stirling/software/SPDF/controller/web/DatabaseWebController.java"
                 exclude "stirling/software/SPDF/model/ApiKeyAuthenticationToken.java"
                 exclude "stirling/software/SPDF/model/Authority.java"
                 exclude "stirling/software/SPDF/model/PersistentLogin.java"
@@ -77,7 +79,7 @@ launch4j {
 
 spotless {
     java {
-        target "src/main/java/**/*.java"
+        target project.fileTree('src/main/java')
 
         googleJavaFormat("1.22.0").aosp().reorderImports(false)
 
@@ -97,11 +99,12 @@ dependencies {
     //security updates
     implementation "ch.qos.logback:logback-classic:1.5.6"
     implementation "ch.qos.logback:logback-core:1.5.6"
-    implementation "org.springframework:spring-webmvc:6.1.8"
+    implementation "org.springframework:spring-webmvc:6.1.9"
 
     implementation("io.github.pixee:java-security-toolkit:1.1.3")
 
-    implementation "org.yaml:snakeyaml:2.2"
+    // implementation "org.yaml:snakeyaml:2.2"
+    implementation 'com.github.Carleslc.Simple-YAML:Simple-Yaml:1.8.4'
     
     // Exclude Tomcat and include Jetty
     implementation("org.springframework.boot:spring-boot-starter-web:$springBootVersion") {
@@ -120,6 +123,7 @@ dependencies {
 
         //2.2.x requires rebuild of DB file.. need migration path
         implementation "com.h2database:h2:2.1.214"
+        // implementation "com.h2database:h2:2.2.224"
     }
 
     testImplementation "org.springframework.boot:spring-boot-starter-test:$springBootVersion"
@@ -133,7 +137,7 @@ dependencies {
     // implementation "com.twelvemonkeys.imageio:imageio-hdr:3.10.1"
     // implementation "com.twelvemonkeys.imageio:imageio-icns:3.10.1"
     // implementation "com.twelvemonkeys.imageio:imageio-iff:3.10.1"
-    implementation "com.twelvemonkeys.imageio:imageio-jpeg:3.10.1"
+    implementation "com.twelvemonkeys.imageio:imageio-jpeg:3.11.0"
     // implementation "com.twelvemonkeys.imageio:imageio-pcx:3.10.1"
     // implementation "com.twelvemonkeys.imageio:imageio-pict:3.10.1"
     // implementation "com.twelvemonkeys.imageio:imageio-pnm:3.10.1"
@@ -181,6 +185,8 @@ dependencies {
     developmentOnly("org.springframework.boot:spring-boot-devtools:$springBootVersion")
     compileOnly "org.projectlombok:lombok:1.18.32"
     annotationProcessor "org.projectlombok:lombok:1.18.32"
+
+    testImplementation 'org.mockito:mockito-inline:3.12.4'
 }
 
 tasks.withType(JavaCompile).configureEach {
