--- a/.github/labeler-config.yml
+++ b/.github/labeler-config.yml
@@ -13,6 +13,7 @@ java:
 documentation:
   - changed-files:
     - any-glob-to-any-file: '**/*.md'
+    - any-glob-to-any-file: '*.md'
 
 docker:
   - changed-files:
