--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -2,6 +2,8 @@ name: "Pull Request Labeler"
 on:
   pull_request_target:
     types: [opened, synchronize]
+  pull_request:
+    types: [opened, synchronize]
 
 jobs:
   labeler:
