--- a/.github/workflows/sync_files.yml
+++ b/.github/workflows/sync_files.yml
@@ -89,3 +89,4 @@ jobs:
             [1]: https://github.com/peter-evans/create-pull-request
           draft: false
           delete-branch: true
+          labels: documentation,translation
