--- a/.github/workflows/exctract.yml
+++ b/.github/workflows/exctract.yml
@@ -18,7 +18,7 @@ jobs:
         python-version: '3.x'
 
     - name: Install dependencies
-      run: pip install requests
+      run: pip install requests packaging
 
     - name: Run script
       env:
