--- a/.github/workflows/review-request.yml
+++ b/.github/workflows/review-request.yml
@@ -10,7 +10,9 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Stellt sicher, dass der gesamte Git-Verlauf abgerufen wird
 
       - name: Parse CODEOWNERS and request reviews
         id: codeowners
@@ -48,7 +50,7 @@ jobs:
           echo "::set-output name=reviewers::$REVIEWERS"
 
       - name: Comment with Review Request
-        uses: actions/github-script@v4
+        uses: actions/github-script@v7
         with:
           script: |
             const { owner, repo } = context.repo;
