--- a/.github/workflows/review-request.yml
+++ b/.github/workflows/review-request.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Stellt sicher, dass der gesamte Git-Verlauf abgerufen wird
+          fetch-depth: 2  # Stellt sicher, dass die letzten zwei Commits abgerufen werden
 
       - name: Parse CODEOWNERS and request reviews
         id: codeowners
@@ -21,7 +21,7 @@ jobs:
           # Pfad zur CODEOWNERS-Datei
           CODEOWNERS_FILE=CODEOWNERS
           # Geänderte Dateien im Pull Request
-          CHANGED_FILES=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }})
+          CHANGED_FILES=$(git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.sha }})
 
           REVIEWERS=""
 
@@ -47,7 +47,7 @@ jobs:
 
           echo "Reviewers to be requested: $REVIEWERS"
 
-          echo "::set-output name=reviewers::$REVIEWERS"
+          echo "reviewers=$REVIEWERS" >> $GITHUB_OUTPUT
 
       - name: Comment with Review Request
         uses: actions/github-script@v7
