--- a/.github/workflows/review-request.yml
+++ b/.github/workflows/review-request.yml
@@ -52,18 +52,24 @@ jobs:
       - name: Comment with Review Request
         uses: actions/github-script@v7
         with:
-          script: |
-            const { owner, repo } = context.repo;
-            const prNumber = context.payload.pull_request.number;
-            const reviewers = "${{ steps.codeowners.outputs.reviewers }}".split(',');
-
-            for (const reviewer of reviewers) {
-              if (reviewer) {
-                await github.issues.createComment({
-                  owner,
-                  repo,
-                  issue_number: prNumber,
-                  body: `@${reviewer.trim()}, could you please review this change?`
-                });
+            script: |
+              const { context, getOctokit } = require('@actions/github');
+              const token = process.env.GITHUB_TOKEN;
+              const octokit = getOctokit(token);
+  
+              const { owner, repo } = context.repo;
+              const prNumber = context.payload.pull_request.number;
+              const reviewers = "${{ steps.codeowners.outputs.reviewers }}".split(',');
+  
+              for (const reviewer of reviewers) {
+                if (reviewer) {
+                  await octokit.issues.createComment({
+                    owner,
+                    repo,
+                    issue_number: prNumber,
+                    body: `@${reviewer.trim()}, could you please review this change?`
+                  });
+                }
               }
-            }
+        env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
