--- a/.github/workflows/review-request.yml
+++ b/.github/workflows/review-request.yml
@@ -52,25 +52,20 @@ jobs:
       - name: Comment with Review Request
         uses: actions/github-script@v7
         env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-            script: |
-                const github = require('@actions/github');
-                const token = process.env.GITHUB_TOKEN;
-                const octokit = github.getOctokit(token);
-                
-                const { context } = github;
-                const { owner, repo } = context.repo;
-                const prNumber = context.payload.pull_request.number;
-                const reviewers = "${{ steps.codeowners.outputs.reviewers }}".split(',');
+          script: |
+            const reviewers = "${{ steps.codeowners.outputs.reviewers }}".split(',');
+            const { owner, repo } = context.repo;
+            const prNumber = context.payload.pull_request.number;
 
-                for (const reviewer of reviewers) {
-                    if (reviewer) {
-                    await octokit.issues.createComment({
-                        owner,
-                        repo,
-                        issue_number: prNumber,
-                        body: `@${reviewer.trim()}, could you please review this change?`
-                    });
-                    }
-                }
+            for (const reviewer of reviewers) {
+              if (reviewer.trim()) {
+                await github.rest.issues.createComment({
+                  owner,
+                  repo,
+                  issue_number: prNumber,
+                  body: `@${reviewer.trim()}, could you please review this change?`
+                });
+              }
+            }
