--- a/.github/workflows/review-request.yml
+++ b/.github/workflows/review-request.yml
@@ -19,7 +19,7 @@ jobs:
         run: |
           echo "Parsing CODEOWNERS file..."
           # Pfad zur CODEOWNERS-Datei
-          CODEOWNERS_FILE=.github/CODEOWNERS
+          CODEOWNERS_FILE=CODEOWNERS
           # Geänderte Dateien im Pull Request
           CHANGED_FILES=$(git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.sha }})
 
