--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,5 +1,7 @@
 # Globale Owner für alle Dateien
 
-*                       @Ludy87
+*                                       @Ludy87
 
-/src/                   @Ludy87
+/src/                                   @Ludy87
+
+!src/main/resources/messages.properties @Ludy87
