--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -4,4 +4,4 @@
 
 /src/                                   @Ludy87
 
-!src/main/resources/messages.properties @Ludy87
+src/main/resources/messages.properties  @Ludy87
