--- a/.github/workflows/ai-code-review.yml
+++ b/.github/workflows/ai-code-review.yml
@@ -60,6 +60,7 @@ jobs:
           git fetch origin "${{ env.PULL_REQUEST_HEAD_REF }}"
           git fetch origin "${{ env.PULL_REQUEST_BASE_REF }}"
           git checkout "${{ env.PULL_REQUEST_HEAD_REF }}"
+          git diff "origin/${{ env.PULL_REQUEST_BASE_REF }}" > diff.txt
           # Filter the diff for specific files
           grep '^diff --git a/src/main/resources/messages_' diff.txt | grep -v 'en_GB' | grep '.properties' > filtered_diff.txt
 
