--- a/.github/workflows/ai-code-review.yml
+++ b/.github/workflows/ai-code-review.yml
@@ -4,53 +4,13 @@ on:
   pull_request:
 
 jobs:
-  # review:
-  #   runs-on: ubuntu-latest
-  #   permissions:
-  #     contents: read
-  #     pull-requests: write
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - name: "Get diff of the pull request"
-  #       id: get_diff
-  #       shell: bash
-  #       env:
-  #         PULL_REQUEST_HEAD_REF: "${{ github.event.pull_request.head.ref }}"
-  #         PULL_REQUEST_BASE_REF: "${{ github.event.pull_request.base.ref }}"
-  #       run: |-
-  #         git fetch origin "${{ env.PULL_REQUEST_HEAD_REF }}"
-  #         git fetch origin "${{ env.PULL_REQUEST_BASE_REF }}"
-  #         git checkout "${{ env.PULL_REQUEST_HEAD_REF }}"
-  #         git diff "origin/${{ env.PULL_REQUEST_BASE_REF }}" > "diff.txt"
-  #         {
-  #           echo "pull_request_diff<<EOF";
-  #           cat "diff.txt";
-  #           echo 'EOF';
-  #         } >> $GITHUB_OUTPUT
-  #     - uses: ludy87/action/reviewer@main
-  #       name: "Code Review by Gemini AI"
-  #       id: review
-  #       with:
-  #         gemini_api_key: ${{ secrets.GEMINI_API_KEY }}
-  #         github_token: ${{ secrets.GITHUB_TOKEN }}
-  #         github_repository: ${{ github.repository }}
-  #         github_pull_request_number: ${{ github.event.pull_request.number }}
-  #         git_commit_hash: ${{ github.event.pull_request.head.sha }}
-  #         model: "gemini-1.5-pro-latest"
-  #         pull_request_diff: |-
-  #           ${{ steps.get_diff.outputs.pull_request_diff }}
-  #         pull_request_chunk_size: "3500"
-  #         extra_prompt: |-
-  #           Always answer in American English!
-  #         log_level: "DEBUG"
-  language:
+  review:
     runs-on: ubuntu-latest
     permissions:
       contents: read
       pull-requests: write
     steps:
       - uses: actions/checkout@v4
-
       - name: "Get diff of the pull request"
         id: get_diff
         shell: bash
@@ -67,25 +27,19 @@ jobs:
             cat "diff.txt";
             echo 'EOF';
           } >> $GITHUB_OUTPUT
-
-      - name: "Read messages_en_GB.properties"
-        id: read_en_gb
-        run: |
-          echo "extra_prompt<<EOF" >> $GITHUB_OUTPUT
-          cat src/main/resources/messages_en_GB.properties >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
-
-      - uses: ludy87/action/check_language@main
-        name: "Code Review by Gemini AI"
-        id: language
-        with:
-          gemini_api_key: ${{ secrets.GEMINI_API_KEY }}
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          github_repository: ${{ github.repository }}
-          github_pull_request_number: ${{ github.event.pull_request.number }}
-          git_commit_hash: ${{ github.event.pull_request.head.sha }}
-          model: "gemini-1.5-pro-latest"
-          pull_request_diff: ${{ steps.get_diff.outputs.pull_request_diff }}
-          pull_request_chunk_size: "3500"
-          extra_prompt: ${{ steps.read_en_gb.outputs.extra_prompt }}
-          log_level: "DEBUG"
+  #     - uses: ludy87/action/reviewer@main
+  #       name: "Code Review by Gemini AI"
+  #       id: review
+  #       with:
+  #         gemini_api_key: ${{ secrets.GEMINI_API_KEY }}
+  #         github_token: ${{ secrets.GITHUB_TOKEN }}
+  #         github_repository: ${{ github.repository }}
+  #         github_pull_request_number: ${{ github.event.pull_request.number }}
+  #         git_commit_hash: ${{ github.event.pull_request.head.sha }}
+  #         model: "gemini-1.5-pro-latest"
+  #         pull_request_diff: |-
+  #           ${{ steps.get_diff.outputs.pull_request_diff }}
+  #         pull_request_chunk_size: "3500"
+  #         extra_prompt: |-
+  #           Always answer in American English!
+  #         log_level: "DEBUG"
