--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -14,6 +14,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: PR Title Verify
-        uses: satvik-s/pr-title-check
+        uses: satvik-s/pr-title-check@1.3.0
         with:
           pattern: '(fix|feat|chore|docs|style|refactor|perf|test): (?:\w+\b\W*){3,8}$'
