--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -7,6 +7,7 @@ on:
       - synchronize
       - labeled
       - unlabeled
+  issues:
 
 jobs:
   check:
@@ -14,6 +15,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: PR Title Verify
-        uses: satvik-s/pr-title-check@1.3.0
+        uses: Ludy87/action/pr-issues-title-check@main
         with:
           pattern: '(fix|feat|chore|docs|style|refactor|perf|test): (?:\w+\b\W*){3,8}$'
