--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -16,5 +16,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: PR Title Verify
         uses: Ludy87/action/pr-issues-title-check@main
+        env:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
         with:
           pattern: '(fix|feat|chore|docs|style|refactor|perf|test): (?:\w+\b\W*){3,8}$'
