--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -20,3 +20,8 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           issues_pattern: '^(\[Feature Request\]|\[Bug\]): (?:\w+\b\W*){3,8}$'
           issues_pattern_flags: gmi
+          issues_comment: |
+            Hier steht ein Text
+            mit zwei Absätzen @${{ github.actor }} und einer leeren Zeile
+
+            Hier ist das Ende vom Gelände!
