--- a/DockerSelfBuild/default/Dockerfile
+++ b/DockerSelfBuild/default/Dockerfile
@@ -17,7 +17,7 @@ FROM alpine:3.20.0
 # Copy necessary files from the build stage
 COPY --from=build /app/build/libs/*.jar /app.jar
 COPY ../../scripts /scripts
-COPY ../../pipeline /pipeline
+COPY ../../pipeline/defaultWebUIConfigs /pipeline/defaultWebUIConfigs
 COPY ../../src/main/resources/static/fonts/*.ttf /usr/share/fonts/opentype/noto/
 
 ARG VERSION_TAG
