--- a/DockerSelfBuild/default/Dockerfile
+++ b/DockerSelfBuild/default/Dockerfile
@@ -16,7 +16,7 @@ FROM alpine:3.20.0
 
 # Copy necessary files from the build stage
 COPY --from=build /app/build/libs/*.jar /app.jar
-COPY ../../scripts /scripts
+COPY ../../scripts/init.sh /scripts/init.sh
 COPY ../../pipeline/defaultWebUIConfigs /pipeline/defaultWebUIConfigs
 COPY ../../src/main/resources/static/fonts/*.ttf /usr/share/fonts/opentype/noto/
 
