--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,6 @@ customFiles/
 configs/
 watchedFolders/
 
-
 # Gradle
 .gradle
 .lock
@@ -108,7 +107,6 @@ watchedFolders/
 
 # Package Files #
 *.jar
-# !gradle/wrapper/gradle-wrapper.jar
 *.war
 *.nar
 *.ear
@@ -118,14 +116,12 @@ watchedFolders/
 *.db
 /build
 
-/.vscode
-/.idea
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*.pyo
 
-# Ignore Mac DS_Store files
-.DS_Store
-**/.DS_Store
-
-# Environments
+# Virtual environments
 .env*
 .venv*
 env*/
@@ -134,5 +130,34 @@ ENV/
 env.bak/
 venv.bak/
 
+# VS Code
+/.vscode/**/*
+!/.vscode/settings.json
+
+# IntelliJ IDEA
+.idea/
+*.iml
+out/
+
+# Ignore Mac DS_Store files
+.DS_Store
+**/.DS_Store
+
+# cucumber
+/cucumber/reports/**
+
 # Certs
 *.p12
+*.pem
+*.crt
+*.cer
+*.der
+*.key
+*.csr
+
+# cache
+.ruff_cache
+.mypy_cache
+.pytest_cache
+.ipynb_checkpoints
+
