--- a/Dockerfile-ultra-lite
+++ b/Dockerfile-ultra-lite
@@ -16,7 +16,7 @@ ENV DOCKER_ENABLE_SECURITY=false \
 COPY scripts/download-security-jar.sh /scripts/download-security-jar.sh
 COPY scripts/init-without-ocr.sh /scripts/init-without-ocr.sh
 COPY pipeline /pipeline
-COPY build/libs/*.jar /app.jar
+COPY build/libs/*.jar app.jar
 
 # Set up necessary directories and permissions
 RUN echo "@testing https://dl-cdn.alpinelinux.org/alpine/edge/main" | tee -a /etc/apk/repositories && \
@@ -45,5 +45,5 @@ ENV ENDPOINTS_GROUPS_TO_REMOVE=CLI
 EXPOSE 8080/tcp
 
 # Run the application
-ENTRYPOINT ["tini", "--", "/scripts/init-without-ocr-ultra-lite.sh"]
+ENTRYPOINT ["tini", "--", "/scripts/init-without-ocr.sh"]
 CMD ["java", "-Dfile.encoding=UTF-8", "-jar", "/app.jar"]
