--- a/build.gradle
+++ b/build.gradle
@@ -12,11 +12,11 @@ plugins {
 import com.github.jk1.license.render.*
 
 ext {
-    springBootVersion = "3.3.0"
+    springBootVersion = "3.3.2"
 }
 
 group = "stirling.software"
-version = "0.26.1a"
+version = "0.26.2"
 
 // 17 is lowest but we support and recommend 21
 sourceCompatibility = "17"
@@ -40,6 +40,7 @@ sourceSets {
                 exclude "stirling/software/SPDF/controller/web/AccountWebController.java"
                 exclude "stirling/software/SPDF/controller/web/DatabaseWebController.java"
                 exclude "stirling/software/SPDF/model/ApiKeyAuthenticationToken.java"
+                exclude "stirling/software/SPDF/model/AttemptCounter.java"
                 exclude "stirling/software/SPDF/model/Authority.java"
                 exclude "stirling/software/SPDF/model/PersistentLogin.java"
                 exclude "stirling/software/SPDF/model/User.java"
@@ -113,7 +114,6 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-jetty:$springBootVersion"
 
     implementation "org.springframework.boot:spring-boot-starter-thymeleaf:$springBootVersion"
-    // implementation "org.springframework.boot:spring-boot-starter-oauth2-resource-server:$springBootVersion"
 
     if (System.getenv("DOCKER_ENABLE_SECURITY") != "false") {
         implementation "org.springframework.boot:spring-boot-starter-security:$springBootVersion"
