--- a/Dockerfile-fat
+++ b/Dockerfile-fat
@@ -34,9 +34,9 @@ ENV DOCKER_ENABLE_SECURITY=false \
     INSTALL_BOOK_AND_ADVANCED_HTML_OPS=false
 
 # JDK for app
-RUN echo "@testing https://dl-cdn.alpinelinux.org/alpine/v3.20/main" | tee -a /etc/apk/repositories && \
-    echo "@testing https://dl-cdn.alpinelinux.org/alpine/v3.20/community" | tee -a /etc/apk/repositories && \
-    echo "@testing https://dl-cdn.alpinelinux.org/alpine/v3.20/testing" | tee -a /etc/apk/repositories && \
+RUN echo "@testing https://dl-cdn.alpinelinux.org/alpine/edge/main" | tee -a /etc/apk/repositories && \
+    echo "@testing https://dl-cdn.alpinelinux.org/alpine/edge/community" | tee -a /etc/apk/repositories && \
+    echo "@testing https://dl-cdn.alpinelinux.org/alpine/edge/testing" | tee -a /etc/apk/repositories && \
     apk upgrade --no-cache -a && \
     apk add --no-cache \
         ca-certificates \
@@ -56,12 +56,18 @@ RUN echo "@testing https://dl-cdn.alpinelinux.org/alpine/v3.20/main" | tee -a /e
 # OCR MY PDF (unpaper for descew and other advanced featues)
         ocrmypdf \
         tesseract-ocr-data-eng \
-        font-terminus font-dejavu font-noto font-noto-cjk font-awesome font-noto-extra \
+        font-terminus \
+        font-dejavu \
+        font-noto \
+        font-noto-cjk \
+        font-awesome \
+        font-noto-extra \
 # python3/pip
         python3 && \
-    wget https://bootstrap.pypa.io/get-pip.py -qO - | python3 - --break-system-packages --no-cache-dir --upgrade && \
+    wget https://bootstrap.pypa.io/get-pip.py -qO - | python3 - --no-cache-dir --upgrade && \
 # uno unoconv and HTML
-    pip install --break-system-packages --no-cache-dir --upgrade unoconv WeasyPrint opencv-python-headless && \
+    pip install --no-cache-dir --upgrade unoconv WeasyPrint && \
+    apk add --no-cache py3-opencv=4.5.3-r1 && \
     mv /usr/share/tessdata /usr/share/tessdata-original && \
     mkdir -p $HOME /configs /logs /customFiles /pipeline/watchedFolders /pipeline/finishedFolders && \
     fc-cache -f -v && \
