--- a/Dockerfile-fat-Self-Build
+++ b/Dockerfile-fat-Self-Build
@@ -65,7 +65,8 @@ RUN echo "@testing https://dl-cdn.alpinelinux.org/alpine/edge/main" | tee -a /et
 # Add missing dependencies
         libffi-dev \
         gcc \
-        musl-dev && \
+        musl-dev \
+        python3-dev && \
         python3 -m venv /opt/venv && \
         . /opt/venv/bin/activate && \
         pip install --no-cache-dir --upgrade pip setuptools wheel && \
