--- a/Dockerfile-fat-Self-Build
+++ b/Dockerfile-fat-Self-Build
@@ -12,7 +12,7 @@ RUN DOCKER_ENABLE_SECURITY=true \
     gradle clean build
 
 # Main stage
-FROM alpine:3.20.2
+FROM alpine:latest
 
 # Copy necessary files
 COPY --from=build /app/build/libs/*.jar /app.jar
